# Financial_data_dash

./: .replit  Readme.md  advanced_analytics.py  alert_system.py  alpha_vantage_fetcher.py  app.py  data_fetcher.py  notification_system.py  portfolio.db  portfolio_manager.py  pyproject.toml  replit.md  report_generator.py  requirements.txt  risk_calculator.py  utils.py
attached_assets/: Pasted-Build-Prompt-Step-by-Step-1-Project-Objective-Create-a-client-ready-financial-dashboard-using-Pow-1752848759525_1752848759526.txt
